# Lumina-Executable

.agents/memory/: MEMORY.md  tauri-desktop-replit.md
.github/workflows/: build.yml
attached_assets/: Lúmina_1784442827648.sln  index_1784442827647.html  package_1784442827648.json  pnpm-lock_1784442827647.yaml  tauri.conf_1784442827647.json
lumina/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
lumina/.github/workflows/: build.yml
lumina/src/: avatar.ts  main.ts  style.css
lumina/src-tauri/: Cargo.toml  tauri.conf.json
lumina/src-tauri/capabilities/: default.json
lumina/src-tauri/icons/: README.txt  icon.icns
lumina/src-tauri/src/: lib.rs  main.rs
src/: continuous-listener.ts  main.ts  style.css
src-tauri/: Cargo.toml
src-tauri/src/: audio_listener.rs  lib.rs
