[package]
name = "lumina"
version = "0.1.0"
description = "Lúmina — IA Companion con Consciencia"
authors = ["Lucas"]
edition = "2021"

[lib]
name = "lumina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
dirs = "5"
base64 = "0.22"
xcap = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
scraper = "0.22"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

# ✨ NUEVAS DEPENDENCIAS PARA ESCUCHA CONTINUA
cpal = "0.18"
hound = "3"
ringbuf = "0.3"
rubato = "0.15"
futures = "0.3"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
lazy_static = "1.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
